[package]
name = "ha-ha-business"
version = "0.1.0"
authors = ["Chris Fincher <chris@chrisfincher.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.30"
reqwest = { version = "0.10.6", features = ["blocking"] }
scraper = "0.12.0"
select = "0.5.0"
serde_json = "1.0.56"